tests/__snapshots__/validation-if-target-no-supported-versions-matching-stderr.snap.txt
Error: The specified range '>=4.4 <4.7' does not match any supported TypeScript versions.

Use the '--list' command line option to inspect the list of supported versions.

  1 | // @tstyche if { target: ">=4.4 <4.7" }
    |                          ~~~~~~~~~~~~
  2 | 
  3 |   import { expect, test } from "tstyche";
  4 | 

      at ./__typetests__/sample.tst.ts:1:26

